--- a/app/views/lectures/admin/createlectureform.scala.html
+++ b/app/views/lectures/admin/createlectureform.scala.html
@@ -72,7 +72,7 @@
         <div class="show form-inline" id="remote">
             <div class="form-group">
                     <label class="control-label">@Messages("lecture.form.closingdate")</label>
-                    <input type="date" class="form-control" name="closingdate" id="closing_date" placeholder="@Messages("lecture.form.date")">
+                    <input type="text" class="form-control" name="closingdate" id="datepicker" placeholder="@Messages("lecture.form.date")">
                 </div>
                     <br>
                 </div>
