--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,13 +12,13 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/messagestyle.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/angular-csp.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/angular-ui-notification.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/jquery-ui.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery/jquery-2.1.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery/jquery-ui.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/datepicker/moment.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/datepicker/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/gitgraph/gitgraph.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/gitgraph/generategraph.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/message/notify.min.js")" type="text/javascript"></script>
