finish create local lecture test

--- a/app/views/lectures/admin/createlectureform.scala.html
+++ b/app/views/lectures/admin/createlectureform.scala.html
@@ -80,11 +80,11 @@
 
         <div class="form-group">
             <label>@Messages("lecture.form.description")</label>
-            <textarea class="form-control"  name="description" rows="10"></textarea>
+            <textarea class="form-control"  name="description" id="course_description" rows="10"></textarea>
         </div>
 
         <div class="form-group pull-right">
-                <button type="submit" class="btn btn-success">@Messages("lecture.form.create")</button>
+                <button type="submit" id="create_course_button" class="btn btn-success">@Messages("lecture.form.create")</button>
         </div>
 
 </form>
