--- a/app/views/lectures/lecturemy.scala.html
+++ b/app/views/lectures/lecturemy.scala.html
@@ -18,7 +18,7 @@
          <div class="panel panel-default">
            <div class="panel-heading" role="tab" id="a@key">
              <h4 class="panel-title">
-               <a role="button" data-toggle="collapse" data-parent="#mylecturelist"  href="#@key" aria-expanded="false" aria-controls="@key">
+               <a role="button" data-toggle="collapse" data-parent="#mylecturelist"  href="#@key" aria-expanded="false" aria-controls="@key" id="my_semester_tab">
                @key
                </a>
              </h4>
@@ -33,7 +33,7 @@
                   </a>} else {
 
                    @if(user.roles.toString.equals(UserRoll.Students.toString)){
-                     <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
+                     <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item" id="my_lecture_content">
                      @lecture.courseName
                      </a>}
                  }
