--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -5,7 +5,7 @@
     <ul class="nav nav-tabs">
       <li class="active"><a href="#home" data-toggle="tab">@Messages("lecture.home.admin")</a></li>
 
-       <li><a href="#editor" data-toggle="tab">@Messages("lecture.home.correction")</a></li>
+       <li><a href="#editor" data-toggle="tab" id="tab_correction">@Messages("lecture.home.correction")</a></li>
 
       <li><a href="#forum" data-toggle="tab" id="tab_forum">@Messages("lecture.home.forum")</a></li>
     </ul>
@@ -321,7 +321,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="a@assignment.title">
                   <h4 class="panel-title">
-                  <a role="button" data-toggle="collapse" data-parent="#assignmentlist" href="#@assignment.title" aria-expanded="true" aria-controls="@assignment.title">
+                  <a role="button" data-toggle="collapse" data-parent="#assignmentlist" href="#@assignment.title" aria-expanded="true" aria-controls="@assignment.title" id="open_assignment">
                     @assignment.title <span class="badge pull-right">@Handin.getHandinofassignmentinlecture(assignment,lecture,lecture.semester).size()/@Semesteruser.findAllstudentsByLecture(lecture.semester,lecture).size()</span>
                   </a>
                     </h4>
@@ -397,9 +397,9 @@
                           </td>
                           <td>@if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment)!=null){
                             @if(Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).isevaluated){
-                              <a data-toggle="modal" data-target="#@assignment.id@stu.id">@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).totalpoints</a>
+                              <a data-toggle="modal" data-target="#@assignment.id@stu.id" id="eval_result">@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).earndpoints/@Handin.getHandinofassignmentofstudentinlecture(lecture.semester,lecture,stu,assignment).totalpoints</a>
                             }else{
-                              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@assignment.id@stu.id">
+                              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#eval@assignment.id@stu.id" id="add_eval_button">
                                 @Messages("evaluation.add")
                               </button>
                             }
@@ -407,12 +407,12 @@
                             @Messages("admin.homework.correction")
                           }</td>
                           @*modal to add  evaluation to user handin*@
-                          <div class="modal fade" id="@assignment.id@stu.id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                          <div class="modal fade" id="eval@assignment.id@stu.id" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                               <div class="modal-content">
                                 <div class="modal-header">
                                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                  <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")_@stu.lastname"_"@assignment.title</h4>
+                                  <h4 class="modal-title" id="myModalLabel">@Messages("homework.evaluation")_@stu.lastname _@assignment.title</h4>
                                 </div>
                                 <div class="modal-body">
                              <form id="@assignment.title@stu.userHash" action="javascript:submit('@assignment.title@stu.userHash','@lecture.semester','@lecture.courseName','@assignment.id','@stu.email')">
@@ -424,21 +424,21 @@
                                      <label>@Messages("gain")</label>
                                      </div>
                                   <div class="form-group col-xs-5">
-                                      <input type="number"  step="0.01" class="form-control" name="exercise[@index].earndpoints"  value="@exercise.earndpoints">
+                                      <input type="number"  step="0.01" class="form-control" name="exercise[@index].earndpoints"  value="@exercise.earndpoints" id="earndpoints@index">
                                     </div>
                                      <div class="col-xs-1">
                                      <label>@Messages("total")</label>
                                        </div>
                                     <div class="form-group col-xs-5">
-                                    <input type="number"  step="0.01" class="form-control" name="exercise[@index].totalpoints"  value="@exercise.totalpoints">
+                                    <input type="number"  step="0.01" class="form-control" name="exercise[@index].totalpoints"  value="@exercise.totalpoints" id="totalpoints@index">
                                     </div>
                                      <div class="col-xs-12">
-                                  <textarea class="form-control"  rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments" >@exercise.comments</textarea>
+                                  <textarea class="form-control"  rows="3" placeholder="@Messages("comment")" name="exercise[@index].comments" id="comments@index">@exercise.comments</textarea>
                                      </div>
                                    </div>
                                    <hr>
                                }
-                                    <input class="btn btn-primary" type="submit">
+                                    <input class="btn btn-primary" type="submit" id="submit_eval">
                                 }
                                 </form>
                                 </div>
